--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.1",
     "react-slick": "^0.30.3",
+    "react-spinners": "^0.15.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
