--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "bootstrap": "^5.3.3",
+    "firebase": "^11.3.1",
     "react": "^18.3.1",
     "react-card-flip": "^1.2.3",
     "react-dom": "^18.3.1",
@@ -17,6 +20,7 @@
     "react-router-dom": "^7.1.1",
     "react-slick": "^0.30.3",
     "react-spinners": "^0.15.0",
+    "react-toastify": "^11.0.3",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
